# cpuminer

./: CMakeLists.txt  cpu-miner.c  cpuminer-config.h  fpga_sha.c  fpga_sha.h
compat/jansson/: CMakeLists.txt
